--- a/Examen_momento_uno (1).ipynb
+++ b/Examen_momento_uno (1).ipynb
@@ -921,7 +921,7 @@
     "rmse = np.sqrt(mean_squared_error(y_test_cont, y_pred_lin))\n",
     "\n",
     "print(\"\\n\" + \"=\"*50)\n",
-    "print(\"📊 RESULTADOS\")\n",
+    "print(\" RESULTADOS\")\n",
     "print(\"=\"*50)\n",
     "\n",
     "print(f\"\\n→ Regresión Lineal (Puntaje Continuo)\")\n",
